# da-light-client

./: .env  .env_sample  .gitignore  Cargo.toml  Makefile  README.md  index.js  package-lock.json  package.json  state.js  verifier_worker.js
onchain/: README.md
onchain/contracts/: DAConsumer.sol  DAOracle.sol  IDAOracle.sol
onchain/scripts/: pastEvents.js
src/: Cargo.toml  http.rs  light.js  main.rs  proof.rs  rpc.js  rpc.rs  run.js  setup.js  state.js  utils.js  verifier.js
src/src/: main.rs  proof.rs
verifier/: Cargo.toml
verifier/src/: lib.rs
