[package]
name = "light_avail"
version = "0.1.0"
authors = ["kailaskr05@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dusk-plonk = { git = "https://github.com/dusk-network/plonk", tag = "v0.3.5" }
rand = "0.8.3"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3.15", default-features = false, features = ["std", "thread-pool"] }
structopt = { version = "0.3.21", default-features = false, features = ["color", "suggestions", "wrap_help"] }
tokio = { version = "1", features = ["full"]}
chrono = "0.4.19"
num = "0.4"
tracing = { version = "0.1.26", features = ["attributes"] }
tracing-subscriber = { version = "0.2.18", default-features = false, features = ["ansi", "chrono", "json", "fmt", "parking_lot", "smallvec"] }
hyper = { version = "0.14", features = ["full"]}
hyper-tls = "0.5"
