[package]
name = "verifier"
version = "0.1.0"
authors = ["Anjan Roy <anjan.roy@matic.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
dusk-plonk = { git = "https://github.com/dusk-network/plonk" }
dusk-bls12_381 = "0.2.0"
dusk-bytes = "0.1.3"

[lib]
crate-type = ["cdylib"]
