[package]
name = "verifier"
version = "0.1.0"
authors = ["Anjan Roy <anjan.roy@matic.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
dusk-plonk = { git = "https://github.com/dusk-network/plonk", tag = "v0.3.5" }
num_cpus = "1.0"
threadpool = "1.0"

[lib]
crate-type = ["cdylib"]
